texi2html/test/invalid/ignored_not_closed.texi
\input texinfo @c -*-texinfo-*-

@node Top

texte

@ignore

This is ignored

